# roids

./: .gitignore  Cargo.toml
assets/scenes/: roids.glb
assets/shaders/: animated_uv.wgsl  animated_uv_temp.wgsl  bounds_material.wgsl  fbmfire.wgsl  fireball.wgsl  starfield_material.wgsl
models/: roids.blend  ship.blend
src/: asset_loader.rs  bounds.rs  bullet.rs  camera.rs  collision.rs  effect_sprite.rs  game.rs  game_manager.rs  game_ui.rs  gane_ui.rs  health.rs  input.rs  lights.rs  main.rs  modal_screen.rs  movement.rs  pause_screen.rs  player.rs  roid.rs  scheduling.rs  starfield.rs  start_screen.rs
