[package]
name = "roids"
version = "0.1.0"
edition = "2024"

[dependencies.bevy]
version="0.16.1"
features=[
  "file_watcher",
  "embedded_watcher",
]

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

# for Windows
[target.x86_64-pc-windows-msvc]
linker = "rust-lld.exe"

[dependencies]
bevy_spritesheet_animation = "3.0.0"
rand = "0.9.2"
